JavaFSD05Nov2023/Assignments/AWS/G1C3_VISHWAJEET_BHARTI_ASSIGNEMENT3/security_groups.tf
# security_groups.tf

resource "aws_security_group" "allow_http" {
  name        = "allow_http_sg"
  description = "Allow HTTP traffic to EC2 instances"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
