JavaFSD05Nov2023/Assignments/AWS/G1C3_VISHWAJEET_BHARTI_ASSIGNEMENT3/vpc.tf
# vpc.tf

resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "subnet" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
}
